fixed padding/alignment error in form

--- a/css/mysite.css
+++ b/css/mysite.css
@@ -12,14 +12,6 @@ body {
   font-size: 1.2rem;
 }
 
-input[type="text"], select {
-  width: 100%;
-  padding: 20px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  box-sizing: border-box;
-}
-
 input[type="submit"], .button {
   background-color: #ffc107;
   border: 4px solid #ffc107;
